Add buttons and score display through DOM

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="rps.js"></script>
-    <title>Title of the document</title>
+    <script src="rps.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Conor's RPS Game</title>
 </head>
 
 <body>
-</body>
+    <div class="btn-holder">
+        <h2>Choose Your Hand:</h2>
+        <button class="rockbutton">Rock</button>
+        <button class="paperbutton">Paper</button>
+        <button class="scissorsbutton">Scissors</button>
+    </div>
 
+    <div class="scorekeeping">
+        <div class="resultsBox">
+            <h3>Round Winner:</h3>
+        </div>
+        <div class="runningScore">
+            <h3>Total Score:</h3>
+        </div>
+    </div>
+
+</body>
 </html>
